cluster/apps/networking/proxmox/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox
  namespace: networking
spec:
  ports:
    - protocol: TCP
      port: 8006
      name: http
---
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox-1
  namespace: networking
subsets:
  - addresses:
      - ip: 192.168.1.98
    ports:
      - port: 8006
---
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox-2
  namespace: networking
subsets:
  - addresses:
      - ip: 192.168.1.99
    ports:
      - port: 8006
---
